--- a/QinYuan/app/src/main/AndroidManifest.xml
+++ b/QinYuan/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <meta-data android:name="DATABASE" android:value="patio.db" />
         <meta-data android:name="VERSION" android:value="1" />
         <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.yjh.qinyuan.sugar" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.yjh.qinyuan.gson" />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
