--- a/QinYuan/app/build.gradle
+++ b/QinYuan/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.github.satyan:sugar:1.3'
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/locSDK_3.1.jar')
+    compile project(':app:libraries:Android-ViewPagerIndicator-master:library')
 }
