--- a/QinYuan/app/src/main/AndroidManifest.xml
+++ b/QinYuan/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:replace="android:icon, android:theme">
+        tools:replace="android:icon, android:theme" >
         <meta-data
             android:name="DATABASE"
             android:value="patio.db" />
@@ -86,8 +86,15 @@
             android:label="@string/title_activity_login" >
         </activity>
         <activity
-            android:name=".main.DetailActivity"
-            android:label="@string/title_activity_detail" >
+            android:name=".main.DetailActivity" >
+        </activity>
+        <activity
+            android:name=".main.GalleryActivity"  >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+<!---->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
     </application>
 
